Corrections to overall look of navbar and some pages: corrected some margins and alignment.

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,6 +8,8 @@ nav.isOpen {
 }
 
 .navbar {
+    box-sizing: border-box;
+    padding-inline: 1rem;
     max-width: min(60ch, 100%);
     margin: 0 auto;
     display: flex;
