--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -14,7 +14,7 @@
 
 .programming-languages {
     float: left;
-    margin: 1.5rem 1.5rem 0 2rem;
+    margin: 0 1rem 0 1rem;
     max-width: 15rem;
     width: 40%;
     display: grid;
